// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modals component renders exchange fee modal modal when exchange-fee-modal type given 1`] = `
.glamor-7 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  top: 0px;
  bottom: 0px;
  right: 0px;
  left: 0px;
  background-color: rgba(0, 0, 0, 0.9);
}

.glamor-5 {
  border-radius: 10px;
  width: 500px;
  height: auto;
  padding: 20px;
  background-color: white;
  margin: 0 auto;
  font-size: 14px;
}

.glamor-1 {
  font-size: 24px;
}

.glamor-3 {
  font-size: 16px;
  color: #4169E1;
}

.glamor-3:hover {
  cursor: pointer;
}

<div
  className="glamor-6 glamor-7"
>
  <div
    className="glamor-4 glamor-5"
  >
    <h1
      className="glamor-0 glamor-1"
    >
      FX exchange limit fee
    </h1>
    <p>
      You've reached FX rate limit of $6000 per month. Future exchange will proceed with 0,5% fee.
    </p>
    <a
      className="glamor-2 glamor-3"
      onClick={[Function]}
    >
      GOT IT
    </a>
  </div>
</div>
`;

exports[`Modals component renders in modals component 1`] = `
.glamor-1 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  top: 0px;
  bottom: 0px;
  right: 0px;
  left: 0px;
  background-color: rgba(0, 0, 0, 0.9);
}

<div
  className="glamor-0 glamor-1"
/>
`;

exports[`Modals component renders in progress modal modal when in-progress-modal type given 1`] = `
.glamor-7 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  top: 0px;
  bottom: 0px;
  right: 0px;
  left: 0px;
  background-color: rgba(0, 0, 0, 0.9);
}

.glamor-5 {
  border-radius: 10px;
  width: 500px;
  height: auto;
  padding: 20px;
  background-color: white;
  margin: 0 auto;
  font-size: 14px;
}

.glamor-1 {
  font-size: 24px;
}

.glamor-3 {
  border: none;
  font-size: 16px;
  background-color: #4169E1;
  color: white;
  padding: 15px 10px;
  width: 100%;
  border-radius: 25px;
}

.glamor-3:hover {
  cursor: pointer;
}

<div
  className="glamor-6 glamor-7"
>
  <div
    className="glamor-4 glamor-5"
  >
    <h1
      className="glamor-0 glamor-1"
    >
      Exchange finished
    </h1>
    <button
      className="glamor-2 glamor-3"
      onClick={[Function]}
    >
      Close
    </button>
  </div>
</div>
`;

exports[`Modals component renders null when display false passed 1`] = `null`;
